# sam-webapp

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: README.md  main.py  pyproject.toml  requirements.txt
src/: App.vue  main.ts  style.css
src/components/: ControlPanel.vue  ImageEditor.vue  ImageUpload.vue
src/services/: api.ts
src/types/: index.ts
